--- a/index.html
+++ b/index.html
@@ -44,19 +44,19 @@
         <ul>
           <li><a href="#hero" class="active">Home<br></a></li>
           <li><a href="#about">About</a></li>
-          <li><a href="#services">Services</a></li>
-          <li><a href="#products">Products</a></li>
+          <li><a href="#values">Services</a></li>
+          <li><a href="#services">Products</a></li>
           
-          <li><a href="blog.html">Blog</a></li>
+          <li><a href="#faq">F.A.Q</a></li>
           <li class="courses"><a href="#"><span>courses</span> <i class="bi bi-chevron-down toggle-courses"></i></a>
             <ul>
-              <li><a href="#">Advance courses</a></li>
-              <li><a href="#">VLSIworkshops</a></li>
-              <li><a href="#">VLSI internship</a></li>
-              <li class="courses"><a href="#"><span>VLSI projects and protocols </span> <i class="bi bi-chevron-down toggle-courses"></i></a>
+              <li><a href="comingsoon.html">Advance courses</a></li>
+              <li><a href="comingsoon.html">VLSIworkshops</a></li>
+              <li><a href="comingsoon.html">VLSI internship</a></li>
+              <li class="courses"><a href="comingsoon.html"><span>VLSI projects and protocols </span> <i class="bi bi-chevron-down toggle-courses"></i></a>
                 <ul>
-                  <li><a href="#">Hands on projects</a></li>
-                  <li><a href="#">Industrial products</a></li>
+                  <li><a href="comingsoon.html">Hands on projects</a></li>
+                  <li><a href="comingsoon.html">Industrial products</a></li>
                 </ul>
               </li>
               
@@ -113,7 +113,7 @@
                 At SilicWorks, we specialize in the meticulous execution of the physical implementation journey, true to our core philosophy of "Innovating Silicon to Solution." We bridge the critical gap between logical intent and physical reality by providing premier RTL-to-GDSII services alongside a robust portfolio of silicon-proven IP cores. Our expertise encompasses every stage of the backend flow—including synthesis, floorplanning, clock tree synthesis (CTS), and sign-off timing closure—ensuring that complex designs are optimized for power, performance, and area (PPA) at advanced process nodes. By integrating our high-performance Intellectual Property into a seamless design flow, we transform your RTL code into manufacture-ready GDSII files, delivering precision-engineered hardware solutions that empower the next generation of AI, automotive, and telecommunications technology.
               </p>
               <div class="text-center text-lg-start">
-                <a href="#" class="btn-read-more d-inline-flex align-items-center justify-content-center align-self-center">
+                <a href="comingsoon.html" class="btn-read-more d-inline-flex align-items-center justify-content-center align-self-center">
                   <span>Read More</span>
                   <i class="bi bi-arrow-right"></i>
                 </a>
@@ -340,7 +340,7 @@
                 </ul>
 
               </p>
-              <a href="#" class="read-more stretched-link"><span>Read More</span> <i class="bi bi-arrow-right"></i></a>
+              <a href="comingsoon.html" class="read-more stretched-link"><span>Read More</span> <i class="bi bi-arrow-right"></i></a>
             </div>
           </div><!-- End Service Item -->
 
@@ -358,7 +358,7 @@
               </p>
 
 
-                <a href="#" class="read-more stretched-link"><span>Read More</span> <i class="bi bi-arrow-right"></i></a>
+                <a href="comingsoon.html" class="read-more stretched-link"><span>Read More</span> <i class="bi bi-arrow-right"></i></a>
             </div>
           </div><!-- End Service Item -->
 
