--- a/comingsoon.html
+++ b/comingsoon.html
@@ -98,8 +98,8 @@
             <span class="sitename">SiliCWorks</span>
           </a>
           <div class="footer-contact pt-3">
-            <p>A108 Adam Street</p>
-            <p>New York, NY 535022</p>
+            <p>Tenkasi, TamilNadu</p>
+            <p>India, 627811</p>
             <p class="mt-3"><strong>Phone:</strong> <span>+91 6383361119</span></p>
             <p><strong>Email:</strong> <span>silicworks@gmail.com</span></p>
           </div>
