--- a/comingsoon.html
+++ b/comingsoon.html
@@ -108,21 +108,20 @@
         <div class="col-lg-2 col-md-3 footer-links">
           <h4>Useful Links</h4>
           <ul>
-            <li><i class="bi bi-chevron-right"></i> <a href="#">Home</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="#">About us</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="#">Blogs</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="#">Services</a></li>
-
+            <li><i class="bi bi-chevron-right"></i> <a href="index.html">Home</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="#about">About us</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="comingsoon.html">Blogs</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="#values">Services</a></li>
           </ul>
         </div>
         
         <div class="col-lg-2 col-md-3 footer-links">
           <h4>Our Services</h4>
           <ul>
-            <li><i class="bi bi-chevron-right"></i> <a href="#">Careers</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="#">Products</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="#">Courses</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="#">F.A.Q</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="comingsoon.html">Careers</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="#services">Products</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="comingsoon.html">Courses</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="#faq">F.A.Q</a></li>
           </ul>
         </div>
 
