--- a/index.html
+++ b/index.html
@@ -519,7 +519,7 @@
           </div>
 
           <div class="col-lg-6">
-            <form action="https://formspree.io/f/xjgeabkq" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
+            <form action="https://formsubmit.co/shari19032005@example.com" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
               <div class="row gy-4">
 
                 <div class="col-md-6">
@@ -632,30 +632,6 @@
   <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
 
-  <script>
-const form = document.querySelector("form");
-
-form.addEventListener("submit", async function(e) {
-  e.preventDefault();
-
-  const data = new FormData(form);
-
-  const response = await fetch(form.action, {
-    method: form.method,
-    body: data,
-    headers: {
-      'Accept': 'application/json'
-    }
-  });
-
-  if (response.ok) {
-    alert("Message sent successfully!");
-    form.reset();
-  } else {
-    alert("Something went wrong. Please try again.");
-  }
-});
-</script>
 
   <!-- Main JS File -->
   <script src="assets/js/main.js"></script>
