--- a/index.html
+++ b/index.html
@@ -519,7 +519,7 @@
           </div>
 
           <div class="col-lg-6">
-            <form action="https://formsubmit.co/shari19032005@example.com" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
+            <form action="https://formsubmit.co/shari19032005@gmail.com" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
               <div class="row gy-4">
 
                 <div class="col-md-6">
